<resources>
    <string name="app_name">BTVN Buôi 2</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="ac">AC</string>
    <string name="div_operator">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="sum_operator">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus_operator">+</string>
    <string name="_0">0</string>
    <string name="cal_operator">=</string>
    <string name="cute1">☺</string>
    <string name="cute2">🙄</string>
    <string name="cute3">😪</string>
    <string name="cute4">🤐</string>
</resources>