<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvFirstNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/rubik"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvOperator"
        app:layout_constraintEnd_toStartOf="@id/tvOperator"
        app:layout_constraintTop_toTopOf="@id/tvOperator" />

    <TextView
        android:id="@+id/tvOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/rubik"
        android:text="@string/plus_operator"
        android:textColor="#3c6e71"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvSecondNumber"
        app:layout_constraintEnd_toStartOf="@+id/tvSecondNumber"
        app:layout_constraintTop_toTopOf="@+id/tvSecondNumber" />

    <TextView
        android:id="@+id/tvSecondNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/rubik"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/rubik"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@id/tvSecondNumber"
        app:layout_constraintTop_toBottomOf="@id/tvSecondNumber" />

    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@null"
        android:padding="2dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="@+id/tvResult"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-15dp"
        android:background="#f0efef"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnAllClear" />

    <TextView
        android:id="@+id/btnAllClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:background="#353535"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/ac"
        android:textColor="#fafafa"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNumber7"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnCuteCute1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDelete" />

    <TextView
        android:id="@+id/btnCuteCute1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="#353535"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/cute1"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnCuteCute2"
        app:layout_constraintStart_toEndOf="@id/btnAllClear"
        app:layout_constraintTop_toTopOf="@id/btnAllClear" />

    <TextView
        android:id="@+id/btnCuteCute2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="#353535"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/cute2"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnDiv"
        app:layout_constraintStart_toEndOf="@id/btnCuteCute1"
        app:layout_constraintTop_toTopOf="@id/btnAllClear" />

    <TextView
        android:id="@+id/btnDiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="25dp"
        android:background="#3c6e71"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/div_operator"
        android:textColor="#fafafa"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCuteCute2"
        app:layout_constraintTop_toTopOf="@id/btnAllClear" />

    <TextView
        android:id="@+id/btnNumber7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/_7"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNumber4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnNumber8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAllClear" />

    <TextView
        android:id="@+id/btnNumber8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/_8"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnNumber9"
        app:layout_constraintStart_toEndOf="@id/btnNumber7"
        app:layout_constraintTop_toTopOf="@id/btnNumber7" />

    <TextView
        android:id="@+id/btnNumber9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/_9"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnMul"
        app:layout_constraintStart_toEndOf="@id/btnNumber8"
        app:layout_constraintTop_toTopOf="@id/btnNumber7" />

    <TextView
        android:id="@+id/btnMul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="25dp"
        android:background="#3c6e71"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="#fafafa"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNumber9"
        app:layout_constraintTop_toTopOf="@id/btnNumber7" />

    <TextView
        android:id="@+id/btnNumber4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/_4"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNumber1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnNumber5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNumber7" />

    <TextView
        android:id="@+id/btnNumber5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/_5"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnNumber6"
        app:layout_constraintStart_toEndOf="@id/btnNumber4"
        app:layout_constraintTop_toTopOf="@id/btnNumber4" />

    <TextView
        android:id="@+id/btnNumber6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/_6"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnSub"
        app:layout_constraintStart_toEndOf="@id/btnNumber5"
        app:layout_constraintTop_toTopOf="@id/btnNumber4" />

    <TextView
        android:id="@+id/btnSub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="25dp"
        android:background="#3c6e71"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/sum_operator"
        android:textColor="#fafafa"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNumber6"
        app:layout_constraintTop_toTopOf="@id/btnNumber4" />

    <TextView
        android:id="@+id/btnNumber1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/_1"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCuteCute3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnNumber2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNumber4" />

    <TextView
        android:id="@+id/btnNumber2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/_2"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnNumber3"
        app:layout_constraintStart_toEndOf="@id/btnNumber1"
        app:layout_constraintTop_toTopOf="@id/btnNumber1" />

    <TextView
        android:id="@+id/btnNumber3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/_3"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnPlus"
        app:layout_constraintStart_toEndOf="@id/btnNumber2"
        app:layout_constraintTop_toTopOf="@id/btnNumber1" />

    <TextView
        android:id="@+id/btnPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="25dp"
        android:background="#3c6e71"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/plus_operator"
        android:textColor="#fafafa"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNumber3"
        app:layout_constraintTop_toTopOf="@id/btnNumber1" />

    <TextView
        android:id="@+id/btnCuteCute3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/cute3"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnNumber0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNumber1" />

    <TextView
        android:id="@+id/btnNumber0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnCuteCute4"
        app:layout_constraintStart_toEndOf="@id/btnCuteCute3"
        app:layout_constraintTop_toTopOf="@id/btnCuteCute3" />

    <TextView
        android:id="@+id/btnCuteCute4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="#fafafa"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/cute4"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btnCalculate"
        app:layout_constraintStart_toEndOf="@id/btnNumber0"
        app:layout_constraintTop_toTopOf="@id/btnCuteCute3" />

    <TextView
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="25dp"
        android:background="#3c6e71"
        android:elevation="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/cal_operator"
        android:textColor="#fafafa"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCuteCute4"
        app:layout_constraintTop_toTopOf="@id/btnCuteCute3" />

</androidx.constraintlayout.widget.ConstraintLayout>